--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,226 @@
+
+/*************** ELEMENT/ATTRIBUTE SELECTORS ************/
+
+
 body {
     background-color: whitesmoke;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.blue { 
-    display: none;
-}
-
 nav {
     height: 10vh;
     background-color: rgb(42, 47, 49);
-    background-image: url("Layer 61.png");
+    background-image: url("images/Layer\ 61.png");
     display: flex;
     align-items: center;
     justify-content: space-around;
-    
+}
+
+nav div:not(.blue) {
+    opacity: 0.7;
+}
+
+nav div:hover {
+    cursor: pointer;
+    opacity: 1;
 }
 
 nav img {
-    opacity: 0.6;
-}
-
-nav img:hover {
-    opacity: 1;
-    cursor: pointer;
-}
-
-.avatar {
     display: none;
-}
+ }
+ 
 
-
-
-.checked {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.checked label {
-    margin-right: 20px;
-}
-
-/* .file-1 {
-    background-image: url('file.png');
-    width: 50px;
-    height: 50px;
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0.7;
-    display: inline-block;
-} */
-
-main {
+ main {
     background-color: white;
     height: 100%;
     margin-top: 30px;
     border: 1px solid lightgray;
 }
 
-.form {
-    display: flex;
-    padding: 20px;
-    justify-content: flex-start;
-    border-bottom: 1px solid lightgrey;
-}
-
-.file-1 img {
-
-    max-width: 50px;
-}
-
-.file-1 {
-    margin-right: 10px;
-}
-
-.file-content-1 {
-    margin-top: 5px;
-}
-
-.file-content-1 img {
-    width: 95%;
-}
-
 button {
-   width: 100%;
-   margin-top: 20px;
-   padding: 10px;
-   background-color: lightgrey;
-   font-size: 1rem;
-  }
+    color: white;
+    background-color: #484545;
+}
 
+u {
+    opacity: 0.8;
+    color: rgb(59, 59, 59);
+}
 
-  
-  
-  input[type="text"] {
-      display: block;
-      margin-top: 20px;
-      width: -webkit-fill-available;
-      padding: 10px 35px;
-      background: url('Magnify Glass copy.png') no-repeat scroll 5px 5px;
-padding-left:40px;
+a {
+    color:  rgb(60, 177, 230);
+}
+
+input[type="search"] {
+    display: block;
+    margin-top: 20px;
+    width: -webkit-fill-available;
+    padding: 10px 35px;
+    background: url('images/Magnify\ Glass\ copy.png') no-repeat scroll 5px 5px;
+    padding-left:40px;
     background-color: white;
-  }
+    border-radius: 5px; 
+}
 
+.strike {
+    opacity: 0.6;
+    text-decoration: line-through;
+}
 
+/*************** CLASS SLECTORS ************/
+
+    /* NAV */
+
+    .blue, .avatar { 
+        display: none;
+    }
+
+    .timeline-pic, .bell, .smart, .ladder, .magnify {
+        background-image: url('nav-images/form.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 45px;
+        width: 45px;
+    }
+
+    .bell {
+        background-image: url('nav-images/bell.png');
+    }
+
+    .smart {
+        background-image: url('nav-images/smart.png');
+    }
+
+    .ladder {
+        background-image: url('nav-images/ladder.png');
+    }
+
+    .magnify {
+        background-image: url('nav-images/Magnify\ Glass.png')
+    }
+
+    /* FORM */
+
+    .checked {
+        margin-top: 20px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .checked label {
+        margin-right: 20px;
+    }
+
+    /* TIMELINE */
+    
+    .timeline, .layout, .discussion, .timeline-2 {
+        display: flex;
+        padding: 20px;
+        justify-content: space-around;
+        border-bottom: 1px solid lightgrey;
+    }
+
+    .layout content p {
+        font-size: 0.7rem;
+    }
+    
+    .layout  .file-content .content div {
+        margin-right: 10px;
+    }
+
+    .date, .date-2, .date-3 {
+        background-color: rgb(60, 177, 230);
+        background-image: url('images/files.png');
+        width: 40px;
+        height: 40px;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 50%;
+    }
+
+    .date-2 {
+        background-image: url('images/chat.png');
+        margin-right: 10px;
+    }
+
+    .date-3 {
+        background-image: url('images/bell.png');
+        margin-right: 10px;
+    }
+
+    .date p, .date-2 p, .date-3 p{
+        position: relative;
+        background: lightgray;
+        top: 100%;
+        font-size: 10px;
+        width: 120%;
+        text-align: center;
+        left: -10%;
+    }
+    
+    .date-2 {
+        margin-top: 7px;
+    }
+
+    .file-content {
+        margin-top: 5px;
+        font-size: 0.8rem;
+        width: 80%;
+        margin-left: 10px;
+    }
+
+    .rel{
+        position: relative;
+    }
+
+    .rel span {
+        position: absolute;
+        left: 2%;
+        background-color: rgb(60, 177, 230);
+        color: white;
+        top: 68%;
+        padding: 0 2px;
+        font-size: 0.6rem;
+    }
+
+    .tag {
+        background-color: white;
+        color: black;
+        margin-left: 5px;
+        font-size: 0.6rem;
+        border-radius: 0%;
+    }
+
+    .timeline-2 .file-content p {
+        margin-bottom: 10px;
+        margin-top: 0;
+    }
+
+    .excel {
+        background-color: rgb(22, 170, 74) !important;
+        left: 2.7% !important;
+        padding: 0 3px !important;
+    }
+
+    /* BUTTON */
+
+    .show {
+        width: 100%;
+        margin-top: 20px;
+        padding: 10px;
+        background-color: lightgrey;
+        font-size: 1rem;
+        color: black;
+    }
+  
 @media (min-width: 725px) {
+
+/*************** ELEMENT/ATTRIBUTE SELECTORS ************/
 
     body {
         margin: 0;
+        max-width: 1200px;
     }
- 
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 9fr;
-    }
-
 
     nav {
         display: block;
@@ -123,90 +228,249 @@ padding-left:40px;
         margin-top: 0; 
     }
 
+    main {
+        margin-left: 20px;
+    }
+ 
+    button {
+        margin-left: 20px;
+    }
+
+    p {
+        margin-left: 20px;
+        font-size: 1.5rem;
+    }
+      
+    input[type="search"] {
+        margin: 20px;
+        font-size: 1.2rem;
+        background: url('Magnify Glass copy.png') no-repeat scroll 7px 7px;
+        background-color: white;
+        padding-left: 50px; 
+    }
+
+    input[type="checkbox"] {
+        margin-right: 15px;  
+    }
+ 
+    nav > div:not(.blue) {
+        text-align: center;
+        border-bottom: 2px solid black;
+        height: 75px;
+        padding-top: 15px; 
+    }  
+ 
+    nav> div:hover:not(.blue) {
+        background-color: white;
+        border-left: 5px solid rgb(22, 170, 74);
+    }
+
+    nav> div:hover:not(.blue) img {
+        z-index: 1;
+    }
+
+    .avatar:hover .num {
+        z-index: 1;
+    }
+
+    .timeline-pic:hover, .smart:hover, .bell:hover, .ladder:hover, .magnify:hover {
+        background-color: rgb(60, 177, 230);
+    }
+ 
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 9fr;
+    }
+   
+    /* NAV */
+
     .avatar {
         display: block;
     }
 
+    .avatar {
+        background-image: url('nav-images/avatar.png');
+        background-repeat: no-repeat;
+         height: 100%;
+         background-position: center;
+         opacity: 1 !important;
+    }
+
     .blue {
         display: block;
-        height: 5%;
+        height: 4%;
         background-color: rgb(60, 177, 230);
     }
 
-   p {
-       margin-left: 20px;
-       font-size: 1.25rem;
-   }
-      
-   input[type="text"] {
-       margin: 20px;
-       font-size: 1.2rem;
-       background: url('Magnify Glass copy.png') no-repeat scroll 7px 7px;
-       background-color: white;
-       padding-left: 50px; 
-   }
+   .timeline-pic, .smart, .bell, .ladder, .magnify {
+     position: relative;
+     border-style: solid;
+     border-width: 3px;
+     border-color: rgb(51, 45, 35);
+     border-radius: 50%;
+     background-color: gray;
+     height: 47px;
+     width: 47px;
+     margin: 0 auto;
+     opacity: 1 !important;
+    }
 
-   .checked {
-    margin-left: 20px; 
-   }
+    .num, .timeline-pic img {
+        display: none;
+    }
 
-   input[type="checkbox"] {
-     margin-right: 15px;  
-   }
+    /* FORM */
 
-   .file-1 img {
+    .checked {
+        margin-left: 20px; 
+    }
+
+    /* TIMELINE */
+
+   .date img {
        max-width: 100%;
    }
 
-   .file-content-1 img{
+   .date p, .date-2 p, .date-3 p{
+       top: 120%;
+       left: -60%;
+   }
+   
+   .content {
+    display: flex;
+    }
+
+    .file-content p {
+        margin-left: 20px;
+        margin-top: 0;
+        font-size: 1rem;
+    }
+
+    .discussion .file-content {
+        margin-left: -55px;
+    }
+
+    .timeline-2 .file-content p {
+        margin-left: -5px;
+    }
+    
+    .person img {
+        margin-left: 25px;
+    }
+
+    .date-2 {
+        margin-left: -20px;
+    }
+
+   .rel span {
+       top: 30%;
+       left: 20%;
        width: 100%;
-       margin-left: 20px;
-   }
- 
-   button {
-       width:  -webkit-fill-available;
-       margin: 20px;
-       opacity: 0.7;
-       
-   }
-
-   button:hover {
-    opacity: 1;
-    font-size: 1.25rem;
-    cursor: pointer;
-   }
-
-   nav > div:not(.blue) {
        text-align: center;
-       padding: 20px;
-       border-bottom: 2px solid black;
    }
 
-   nav > div img:not(.avatar) {
-    border-style: solid;
-    border-width: 4px;
-    border-color: rgb(51, 45, 35);
-    border-radius: 50%;
-    padding: 12px;
-    background-color: lightslategray;
+   .excel {
+       padding: 0 !important;
+       left: 20% !important;
    }
 
-   .ladder {
-       padding: 13px 15px !important;
-   }
+    em {
+        font-size: 0.6rem;
+        text-align: center;
+    }
+    
+    .show  {
+        width:  -webkit-fill-available;
+        margin: 20px;
+        opacity: 0.7;
+        
+    }
+ 
+    .show:hover {
+     opacity: 1;
+     font-size: 1.25rem;
+     cursor: pointer;
+    }
 
-   nav> div:hover:not(.blue) {
-       background-color: white;
-   }
-
-   nav > div:hover img:not(.avatar) {
-       background-color: rgb(60, 177, 230);
-       border: none;
-   }
 }
-
   
+@media (min-width: 1100px) {
 
+
+    /* NAV */
+
+    .timeline-pic, .smart, .bell, .ladder, .magnify {
+        margin-left: 20px;
+        padding: 4px;
+    }
+    
+    .avatar {
+        opacity: 1;
+        margin-right: 20px;
+    }
+
+    .avatar .num {
+        display: inline;
+        position: relative;
+        background-color: lightgreen;
+        left: 40%;
+        padding: 5px 6px;
+        top: 35%;
+        border-radius: 50%;
+        z-index: -5;
+        font-size: 0.6rem;
+        color: white;
+        font-weight: bold;
+       }
+
+       .timeline-pic  img, .smart img {
+        display: inline;
+        position: relative;
+        border-style: solid;
+        border-width: 2px;
+        background-color: rgb(69, 69, 69);
+        border-color: gray;
+        left: 85%;
+        padding: 4px;
+        top: 28%;
+        border-radius: 50%;
+        z-index: -5;
+       }      
+
+       .bell img {
+        display: inline;
+        position: relative;
+        background-color: gray;
+        left: 87%;
+        padding: 6px;
+        top: 28%;
+        border-radius: 50%;
+        z-index: -5;
+       }
+
+    main {
+        position: relative;
+        z-index: 0;
+    }
+
+    .vl {
+        position: absolute;
+        border-left: 3px solid lightgrey;
+        height: 100%;
+        left: 7.25%;
+        z-index: -1;
+    }   
+
+    .person  {
+        width: 30%;
+    }
+
+    .person p {
+        width: 100%;
+        font-size: 0.8rem;
+    }
+
+}
 
   
 
